# ComfyUI-BodyRatioMapper

./: .gitignore  README.md  README_ZH.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
body_ratio_mapper/: __init__.py  proportion_transfer_node.py  render_nodes.py
body_ratio_mapper/core_modules/: __init__.py  frame_ops.py  global_rpca.py  matrix_ops.py  scale_solver.py  wscs_anchor.py
example_workflows/: bodyratiomapper_officail_sdpose_image.json  bodyratiomapper_officail_sdpose_video.json
web/js/: poseKeypointPreview.js
