[project]
name = "ComfyUI-BodyRatioMapper"
description = "A project for pose alignment and human body proportion mapping based on SDPose"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "opencv-python", "matplotlib"]

[project.urls]
Repository = "https://github.com/wuwukaka/ComfyUI-BodyRatioMapper.git"
# Some code is derived from grmchn/ComfyUI-ProportionChanger

[tool.comfy]
PublisherId = "wuwukaka"
DisplayName = "ComfyUI-BodyRatioMapper"
Icon = ""
